[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Fonts/Titillium-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Screens/Play Screens/Play Preparation Manager.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI Elements/Buttons/play.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI Elements/Buttons/back.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.18921
margin_bottom = 1.18921
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldSectionLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 100.0
margin_right = -100.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "World - Section"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ByLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 100.0
margin_top = 34.0
margin_right = -100.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
text = "By: name"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_editor_description_": ""
}

[node name="DescriptionLabel" type="Label" parent="."]
margin_left = 19.0
margin_top = 91.0
margin_right = 853.0
margin_bottom = 570.0
custom_fonts/font = SubResource( 2 )
text = "Description"
autowrap = true
clip_text = true

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 20.7568
margin_top = 16.5137
margin_right = 78.7568
margin_bottom = 74.5137
rect_pivot_offset = Vector2( 124, -143.189 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 897.656
margin_top = 494.782
margin_right = 971.656
margin_bottom = 568.782
texture_normal = ExtResource( 3 )
expand = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButon_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
